--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1885,8 +1885,8 @@ div.circle.expand {
 }
 
 #main_container > section#sec_story .row > div:nth-child(2) {
-  padding-top: 14rem;
-  padding-bottom: 12rem;
+  display: flex;
+  align-items: center;
   z-index: 5;
 }
 
@@ -1915,7 +1915,7 @@ div.circle.expand {
   max-height: 1000px;
 }
 
-#main_container > section#sec_story .story_contents::after {
+/* #main_container > section#sec_story .story_contents::after {
   content: '';
   position: absolute;
   bottom: 0;
@@ -1924,12 +1924,11 @@ div.circle.expand {
   text-align: center;
   margin: 0;
   padding: 50px 0;
-  /* "transparent" only works here because == rgba(0,0,0,0) */
   background-image: -moz-linear-gradient(top, transparent, #15151e);
   background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, transparent), color-stop(1, #15151e));
   opacity: 1;
   transition: all 0.5s ease-in-out;
-}
+} */
 
 #main_container > section#sec_story .story_contents.open::after {
   opacity: 0;
@@ -2466,7 +2465,7 @@ div.circle.expand {
 }
 
 #main_container > section#sec_roadmap .per_row > li.finish .box > div {
-  color: #02f29d;
+  color: #fff;
   font-weight: 600;
   font-size: 2rem;
 }
